fix(KernelRace): JVM kernelTierLabel() wrongly hardcoded to scalar
Same category of bug as the Panama-wrongly-modeled-on-Android fix in the
engine repo (KernelSupportMatrixTest) — a label claiming "scalar" when a
faster kernel tier is actually active. Platform.jvm.kt's kernelTierLabel()
was a hardcoded "JVM (scalar)" string, but composeApp's :run task always
passes --add-modules jdk.incubator.vector (skainetSimdJvmArgs), so the
normal desktop run actually dispatches through PanamaVectorKernelProvider,
not scalar — the label was simply never updated to reflect that.

Fixed by probing PanamaVectorKernelProvider.isAvailable() directly, same
pattern as Android's JniKernelProvider.isAvailable() — a static capability
check, not a KernelRegistry query. That distinction matters here:
ChatViewModel evaluates kernelTierLabel() at construction time, before
DirectCpuExecutionContext.create() has ever run, and KernelRegistry only
gets populated as a side effect of that (via KernelServiceLoader.installAll()
inside DefaultCpuOpsJvm's init). A registry-based label would read an empty
registry and always report "scalar" regardless of what's about to load.

skainet-backend-cpu depends on skainet-backend-api (where KernelProvider is
declared) as implementation-scoped, so it isn't reachable transitively —
added it directly so PanamaVectorKernelProvider.isAvailable() resolves.

Verified: :shared:compileKotlinJvm, full existing CI matrix
(jvmTest/testDebugUnitTest/assembleDebug/compileKotlinWasmJs ×2/
compileDebugKotlinAndroid) all pass, 0 failures.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>